src/tess/tl/test/fail/test_fail_integer_directed_standalone_csize_to_uint.tl
#module main

accept_uint(x: UInt) -> UInt { x }

main() {
    x: CSize := 42zu
    accept_uint(x)
    0
}
